added white text

--- a/index.html
+++ b/index.html
@@ -22,12 +22,28 @@
 </nav>
 </header>
 
-<img src="images/rocks.jpg" alt="some gravel and dirt">
+<div class="banner">
+<img class="rocks" src="images/rocks.jpg" alt="some gravel and dirt">
+<p class="banner-title">Beetles: 25% of all known animal life-forms.</p>
+</div>
 
-<img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
+<main>
+  
+<div class="ant">
+  <a class="btn" href="#">Learn More</a>
+  <img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
+</div>
+
 <img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
+
 <img class="tile" src="images/dung.jpg" alt="some gravel and dirt">
+
 <img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
+</main>
+
+
+<footer> </footer>
+
 
 </body>
 </html>
