fixed the footer, adjusted the button

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 </div>
 
 <main>
-  
+
 <div class="ant">
-  <a class="btn" href="#">Learn More</a>
   <img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
+  <a class="btn-ant" href="#">Learn More</a>
 </div>
 
 <img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
@@ -41,8 +41,9 @@
 <img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
 </main>
 
-
-<footer> </footer>
+<footer>
+  <img class="footer-img" src="images/logo.svg" alt="beetle">
+</footer>
 
 
 </body>
