Tried to fix buttons

--- a/index.html
+++ b/index.html
@@ -30,15 +30,25 @@
 <main>
 
 <div class="ant">
+  <a class="btn" href="#">Ant Nest</a>
   <img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
-  <a class="btn-ant" href="#">Learn More</a>
 </div>
 
-<img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
+<div class="stag">
+  <a class="btn" href="#">Stag</a>
+  <img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
+</div>
 
-<img class="tile" src="images/dung.jpg" alt="some gravel and dirt">
+<div class="dung">
+  <a class="btn" href="#">Dung</a>
+  <img class="tile" src="images/dung.jpg" alt="some gravel and dirt">
+</div>
 
-<img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
+<div class="tortoise">
+  <a class="btn" href="#">Tortoise</a>
+  <img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
+</div>
+
 </main>
 
 <footer>
