Fixed buttons and added gradients

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 <main>
 
 <div class="ant">
-  <a class="btn" href="#">Ant Nest</a>
+  <a class="btn-ant" href="#">Ant Nest</a>
   <img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
 </div>
 
 <div class="stag">
-  <a class="btn" href="#">Stag</a>
+  <a class="btn-stag" href="#">Stag</a>
   <img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
 </div>
 
 <div class="dung">
-  <a class="btn" href="#">Dung</a>
+  <a class="btn-dung" href="#">Dung</a>
   <img class="tile" src="images/dung.jpg" alt="some gravel and dirt">
 </div>
 
 <div class="tortoise">
-  <a class="btn" href="#">Tortoise</a>
+  <a class="btn-tortoise" href="#">Tortoise</a>
   <img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
 </div>
 
