fixed buttons and gradient

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
 
 <main>
 
-<div class="ant">
+<div class="tile ant">
   <a class="btn-ant" href="#">Ant Nest</a>
-  <img class="tile" src="images/ant-nest.jpg" alt="some gravel and dirt">
+  <img class="" src="images/ant-nest.jpg" alt="some gravel and dirt">
 </div>
 
-<div class="stag">
+<div class="tile stag">
   <a class="btn-stag" href="#">Stag</a>
-  <img class="tile" src="images/stag.jpg" alt="some gravel and dirt">
+  <img class="" src="images/stag.jpg" alt="some gravel and dirt">
 </div>
 
-<div class="dung">
+<div class="tile dung">
   <a class="btn-dung" href="#">Dung</a>
-  <img class="tile" src="images/dung.jpg" alt="some gravel and dirt">
+  <img class="" src="images/dung.jpg" alt="some gravel and dirt">
 </div>
 
-<div class="tortoise">
+<div class="tile tortoise">
   <a class="btn-tortoise" href="#">Tortoise</a>
-  <img class="tile" src="images/tortoise.jpg" alt="some gravel and dirt">
+  <img class="" src="images/tortoise.jpg" alt="some gravel and dirt">
 </div>
 
 </main>
