Changed image sizes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
 
 <div class="banner">
-<img class="rocks" src="images/rocks.jpg" alt="some gravel and dirt">
+  <img class="rocks" src="images/rocks.jpg">
 <p class="banner-title">Beetles: 25% of all known animal life-forms.</p>
 </div>
 
